[feature] Run `receptor` in a container in the same pod
- Use `v1.3.0`, it being the latest version that has [v1 JSON format on GHCR](https://access.redhat.com/solutions/6843481)
- Use a separate, fixed configuration file (not the one that `awx-task` keeps rewriting); clients will (later) connect through a Kubernetes Service instead, as described in https://malfunceddie.github.io/article/awx-hop-nodes/hopnodes/
- Set up a server port lest `receptor` terminate prematurely, although experience suggests (see comments) that it is not used 🤦

Now the `awx-task` container has a real `receptor` to talk to, which makes it happier.

--- a/ansible/roles/awx-instance/tasks/k8s-builds.yml
+++ b/ansible/roles/awx-instance/tasks/k8s-builds.yml
@@ -60,3 +60,12 @@
   shell: "oc -n {{ awx_build_namespace }} start-build --wait {{ awx_image_name }}"
   delegate_to: localhost
   tags: awx.build.awx
+
+- name: "Pull upstream receptor image into {{ awx_receptor_image_mirrored_to }}"
+  delegate_to: localhost
+  openshift_imagestream:
+    metadata:
+      name: receptor
+      namespace: "{{ ansible_oc_namespace }}"
+    from: "{{ awx_receptor_image_mirrored_from }}"
+    tag: "{{ awx_receptor_version }}"
