[feature] `awx_verbose` variable
When `awx_verbose` is set:
- AWX-Django `Settings.LOG_AGREGATOR_LEVEL` (as found in `awx/settings/defaults.py`) is set to  `"DEBUG"`
- A few more AWX-Django logging bells and whistles (that I found in `awx/settings/development.py`) are turned on
- `/usr/local/bin/receptor` runs in debug mode
- `Settings.RECEPTOR_RELEASE_WORK` is `False`, which gets passed around to the receptor, so that it refrains from deleting artifacts (both files and Kubernetes pods) when jobs terminate.

💡 As far as receptor files are concerned, they can thereafter be found under `/tmp/awx-NNNN-*` in the `awx-receptor` container, where the NNNN correspond to the AWX job ID.

--- a/ansible/roles/awx-instance/templates/receptor.conf
+++ b/ansible/roles/awx-instance/templates/receptor.conf
@@ -7,7 +7,11 @@
  #
  # Paraphrased https://malfunceddie.github.io/article/awx-hop-nodes/hopnodes/ #}
 
+{% if awx_verbose %}
+- log-level: debug
+{% else %}
 - log-level: info
+{% endif %}
 
 - tcp-listener:
     # Believe it or not, this port is actually unused (all the traffic
