--- a/ansible/roles/awx-instance/tasks/main.yml
+++ b/ansible/roles/awx-instance/tasks/main.yml
@@ -45,8 +45,8 @@
       version: "{{ awx_version }}"
     - name: "{{ awx_receptor_image_name }}"
       version: "{{ awx_receptor_version }}"
-    - name: "{{ awx_runner_image_name }}"
-      version: latest
+    - name: "{{ awx_ee_image_name }}"
+      version: "{{ awx_ee_version }}"
   # 💡 Other image promotion tasks (for “core” WordPress serving and
   # cron images) can be found in
   # ../../wordpress-openshift-namespace/tasks/images.yml (under tag
