fix: wp.plugins.mu.last-changes tag

--- a/ansible/roles/wordpress-instance/tasks/main.yml
+++ b/ansible/roles/wordpress-instance/tasks/main.yml
@@ -168,6 +168,7 @@
     - wp.plugins.restauration.options
     - wp.plugins.mu
     - wp.plugins.mu.social-graph
+    - wp.plugins.mu.last-changes
     - wp.plugins.wp-gutenberg
     # OBSOLETE aliases:
     - plugins
