--- a/ansible/roles/wordpress-instance/tasks/plugins.yml
+++ b/ansible/roles/wordpress-instance/tasks/plugins.yml
@@ -204,17 +204,17 @@
     - wp.plugins.mu
     - wp.plugins.mu.social-graph
 
-- name: Last Page Changes (must-use plugin)
-  wordpress_plugin:
-    name: EPFL_Last_Page_Changes
-    is_mu: yes
-    state:
-      - symlinked
-    from:
-      - https://github.com/epfl-si/wp-mu-plugins/blob/master/EPFL_last_page_changes.php
-  tags:
-    - wp.plugins.mu
-    - wp.plugins.mu.last-changes
+#- name: Last Page Changes (must-use plugin)
+#  wordpress_plugin:
+#    name: EPFL_Last_Page_Changes
+#    is_mu: yes
+#    state:
+#      - symlinked
+#    from:
+#      - https://github.com/epfl-si/wp-mu-plugins/blob/master/EPFL_last_page_changes.php
+#  tags:
+#    - wp.plugins.mu
+#    - wp.plugins.mu.last-changes
 
 ##################### "2018" plugins ###########################
 
@@ -554,6 +554,15 @@
     name: EPFL-Library-Plugins
     state: "{{ plugins_for_library_category }}"
     from: https://github.com/epfl-si/wp-plugin-epfl-library
+
+- name: epfl_diploma_verification plugin
+  wordpress_plugin:
+    name: epfl_diploma_verification
+    state: "{{ plugins_for_diploma_verification_category }}"
+    from: https://github.com/epfl-si/wp-plugin-epfl-diploma-verification
+  tags:
+    - wp.plugins
+    - wp.plugins.diploma-verification
 
 - name: epfl-courses-se plugin
   wordpress_plugin:
